# Auto_Aim

./: .gitignore  auto_aim.rviz  level10.cpp  tf.sh
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/armor_detector/: AngleSolve.hpp  Armor_detection.hpp  Number_DNN.hpp  armor.hpp  pnp_solver.hpp  robot_status.hpp  robot_struct.hpp
src/armor_detector/src/: AngleSolve.cpp  Armor_detection.cpp  Number_DNN.cpp  detection_hj_node.cpp  detector_node.cpp  odom_to_camera_node.cpp  pnp_solver.cpp
src/armor_tracker/include/armor_tracker/: tracker.hpp  tracker_node.hpp
src/armor_tracker/src/: tracker.cpp  tracker_node.cpp
src/auto_aim_bringup/: package.xml
src/auto_aim_bringup/config/: Solve_data.yaml  default.yaml
src/auto_aim_bringup/launch/: auto_aim.launch.py
src/auto_aim_interfaces/: CMakeLists.txt
src/auto_aim_interfaces/msg/: Vision.msg
src/auto_aim_processor/: CMakeLists.txt  package.xml
src/auto_aim_processor/config/: processor_params.yaml
src/auto_aim_processor/include/: common_types.hpp  my_detector.hpp  my_tracker.hpp  processor_node.hpp
src/auto_aim_processor/include/auto_aim_processor/: my_detector.hpp  my_tracker.hpp  processor_node.hpp
src/auto_aim_processor/src/: my_detector.cpp  my_tracker.cpp  processor_node.cpp
src/fire_control/: CMakeLists.txt  package.xml
src/fire_control/src/: fire_control_node.cpp
src/ros2-hik-camera-main/ros2-hik-camera-main/config/: camera_info.yaml  camera_params.yaml
src/ros2-hik-camera-main/ros2-hik-camera-main/src/: hik_camera_node.cpp
src/serical_device_ros2/: CMakeLists.txt  package.xml  robot_ctrl_node.cpp  vision_pub_node.cpp
src/serical_device_ros2/include/: serial_main.h
src/serical_device_ros2/src/: serial_device.cpp  serial_main.cpp
